--- a/style.css
+++ b/style.css
@@ -1,3 +1,13 @@
+.page{
+    background-color: pink;
+}
+.header{
+    padding: 0;
+    margin: 0;
+}
+.header__title{
+    text-align: center;
+}
 .header__block{
     height: 400px;
 }
@@ -7,4 +17,11 @@
         object-fit: cover;
         width: 100vw;
         height: 100%;
+}
+.text{
+    padding-top: 100px;
+}
+.text__title{
+    text-align: center;
+    padding-: ;
 }
