--- a/style.css
+++ b/style.css
@@ -1,27 +1,47 @@
-.page{
-    background-color: pink;
-}
-.header{
+.page {
+    margin: 0;
     padding: 0;
+    background-color: rgb(238, 158, 240);
+}
+
+.header {
+    /* padding: 0 0 30px; */
     margin: 0;
 }
-.header__title{
+
+.header__title {
+    padding: 200px auto 0;
     text-align: center;
+    color: rgb(176, 240, 113);
 }
-.header__block{
+
+.header__block {
+    background-image: url(./image/header.jpg);
+    background-position: center center;
+    background-size: cover;
+    width: 100vw;
+    height: auto;
     height: 400px;
 }
-.header__image{
-        /* background-image: url(./image/header.jpg); */
-        background-repeat: no-repeat;
-        object-fit: cover;
-        width: 100vw;
-        height: 100%;
+
+.header__image {
+    width: 100vw;
+    height: 100%;
 }
-.text{
-    padding-top: 100px;
+
+.text {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding-top: 50px;
+    margin: 0 15px;
 }
-.text__title{
+
+.text__image{
+    width: 380px;
+    margin: 0 auto;
+}
+.text__title {
     text-align: center;
     padding-: ;
 }
