--- a/style.css
+++ b/style.css
@@ -1,11 +1,22 @@
 .page {
     margin: 0;
     padding: 0;
-    background-color: rgb(238, 158, 240);
+    background-color: #F9E6D5;
+}
+
+.text {
+    font-weight: 600;
+    color: #b74738;
+}
+
+.text__title {
+    color: #b74738;
+    font-weight: 900;
+    font-size: 32px;
+    line-height: 35px;
 }
 
 .header {
-    /* padding: 0 0 30px; */
     margin: 0;
 }
 
@@ -29,7 +40,8 @@
     height: 100%;
 }
 
-.text {
+.apologies {
+    padding-bottom: 30px;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -37,11 +49,18 @@
     margin: 0 15px;
 }
 
-.text__image{
+.apologies__image {
     width: 380px;
     margin: 0 auto;
 }
-.text__title {
+
+.apologies__title {
+
+    color: rgb(252, 8, 24);
     text-align: center;
-    padding-: ;
+    margin: 0 auto 10px;
+}
+
+.apologies__text {
+
 }
